--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,13 @@
             <version>3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>1.9.2.RELEASE</version>
+        </dependency>
+
+
         <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
